syntax = "proto3";

package product;

option go_package = "./pb;pb";

service ProductService {
  rpc GetAllProducts (Empty) returns (ProductListResponse);
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Empty {}

message Product {
  uint32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message ProductListResponse {
  repeated Product products = 1;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message UpdateProductRequest {
  uint32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message DeleteProductRequest {
  uint32 id = 1;
}

message ProductResponse {
  Product product = 1;
}

message DeleteProductResponse {
  string message = 1;
}
