syntax = "proto3";

package auth;

option go_package = "internal/auth/delivery/grpc/pb;pb";

// Request message untuk Register
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

// Response message untuk Register dan Login
message AuthResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string token = 4;
}

// Request message untuk Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Service definition
service AuthService {
  // Register user baru
  rpc Register (RegisterRequest) returns (AuthResponse);
  // Login user, return JWT token di AuthResponse.token
  rpc Login (LoginRequest) returns (AuthResponse);
}
